# pascal2c

./: .gitignore  CMakeLists.txt  ReadMe.md  step0.json
.github/workflows/: ci.yml
ci_test/: run_tests.py
ci_test/cases/: basic_add.pas  basic_arithmetic.out  basic_arithmetic.pas  basic_array.pas  basic_array_advance.pas  basic_const.out  basic_const.pas  basic_div.pas  basic_expression.pas  basic_id_num.pas  basic_io.pas  basic_line.out  basic_line.pas  basic_mul.pas  basic_process.in  basic_process.out  basic_process.pas  basic_program.pas  basic_programstruct.pas  basic_quicksort.pas  basic_record.pas  basic_sub.pas
cmake/: FindCheck.cmake
sample_pas/: add_test.pas  basic_line.pas  for_test.pas  gcd.pas  mul_test.pas  program.pas  test.pas  while_stmt.pas  while_test.pas
scripts/: codegen.py
src/: ReadMe.md  ast.c  ast.h  ast_lex.l  ast_yacc.y  codegen.c  codegen.h  error.c  error.h  lex.yy.c  main.c  pascal.l  pascal.y  sybtable.c  sybtable.h  test.txt  y.tab.c  y.tab.h
tests/: CMakeLists.txt  test_ast.c
