cmake_minimum_required(VERSION 3.15)
project(pascal2c C)

set(CMAKE_C_STANDARD 11)
include_directories(src)
include_directories(3rd_parties)
find_package(BISON)
BISON_TARGET(PARSER src/pascal.y ${CMAKE_CURRENT_BINARY_DIR}/y.tab.c)
find_package(FLEX)
FLEX_TARGET(LEXER src/pascal.l ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.c)
add_executable(pascal2c 3rd_parties/sds.c src/main.c src/ast.c src/error.c ${BISON_PARSER_OUTPUTS} ${FLEX_LEXER_OUTPUTS} src/codegen.c src/codegen.h)